# cmake-vscode-example

./: CMakeLists.txt  README.md  default.nix  main.cpp
